<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Catchme</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="test">11</string>
    <string name="tester">12</string>
    <string name="eins">1</string>
    <string name="zwei">2</string>
    <string name="drei">3</string>
    <string name="vier">4</string>
    <string name="fünf">5</string>
    <string name="sechs">6</string>
    <string name="sieben">7</string>
    <string name="acht">8</string>
    <string name="neun">9</string>
    <string name="zehn">0</string>
    <string name="doppelnull">00</string>
    <string name="apply">A</string>
    <string name="title_activity_input">InputActivity</string>

</resources>
