<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
    
    
     xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Eingabe"
   
    android:layout_width="match_parent"
    android:layout_height="match_parent"> 
    
  
      <TextView 
          android:id="@+id/checkE" 
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_centerInParent="true"
          android:textSize="25sp"
          android:text=""/> 
          
        <TextView 
          android:id="@+id/fault" 
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/checkE"
          android:layout_centerInParent="true"
          android:textSize="20sp"
          android:textColor="#ff0000"
          android:text=""/> 
     
    <GridLayout 
        android:id="@+id/Reihe1" 
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"  
        android:layout_width="wrap_content" 
        
        android:columnCount="9">
        
    <Button  
        android:id="@+id/button1"
        android:layout_column="0"
        android:layout_columnSpan="3"
        
        android:layout_row="1"
        android:text="@string/eins" 
        android:onClick="button1_Click"/>
    <Button  
        android:id="@+id/button2"
        android:layout_column="3"
        android:layout_columnSpan="3"
      
        android:layout_row="1"
        android:text="@string/zwei"  
        android:onClick="button2_Click"/>
     <Button  
       android:id="@+id/button3"
        android:layout_column="6"
        android:layout_columnSpan="3"
       
        android:layout_row="1"
        android:text="@string/drei" 
        android:onClick="button3_Click"/>
      <Button  
        android:id="@+id/button4"
        android:layout_column="0"
        android:layout_columnSpan="3"
        

        android:layout_row="2"
        android:text="@string/vier" 
        android:onClick="button4_Click"/>
    <Button  
        android:id="@+id/button5"
        android:layout_column="3"
        android:layout_columnSpan="3"
     
        android:layout_row="2"
        android:text="@string/fünf"  
        android:onClick="button5_Click"/>
     <Button  
       android:id="@+id/button6"
        android:layout_column="6"
        android:layout_columnSpan="3"
     
        android:layout_row="2"
        android:text="@string/sechs" 
        android:onClick="button6_Click"/> 
       <Button  
        android:id="@+id/button7"
        android:layout_column="0"
        android:layout_columnSpan="3"
      
        android:layout_row="3"
        android:text="@string/sieben" 
        android:onClick="button7_Click"/>
    <Button  
        android:id="@+id/button8"
        android:layout_column="3"
        android:layout_columnSpan="3"
       
        android:layout_row="3"
        android:text="@string/acht"  
        android:onClick="button8_Click"/>
     <Button  
       android:id="@+id/button9"
        android:layout_column="6"
        android:layout_columnSpan="3"
     
        android:layout_row="3"
        android:text="@string/neun" 
        android:onClick="button9_Click"/>
     <Button  
        android:id="@+id/button10"
        android:layout_column="0"
        android:layout_columnSpan="3"
      
        android:layout_row="4"
        android:text="@string/zehn" 
        android:onClick="button10_Click"/>
    <Button  
        android:id="@+id/button11"
        android:layout_column="3"
        android:layout_columnSpan="3"
       
        android:layout_row="4"
        android:text="@string/doppelnull"  
        android:onClick="button11_Click"/>
     <Button  
       android:id="@+id/button12"
        android:layout_column="6"
        android:layout_columnSpan="3"
     
        android:layout_row="4"
        android:text="@string/apply" 
        android:onClick="button12_Click"/> 
  

    </GridLayout>

   


</RelativeLayout>
    
